[package]
name = "push_notifications"
version = "0.0.1"
edition = "2024"

[dependencies]
rocket = { version = "0.5.1-rc.3", features = ["json", "secrets"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lapin = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
async-trait = "0.1"
futures-util = "0.3"
serde_yml = "0.0.12"
config = "0.15.13"
rumqttc = "0.23"
